# Personal-Projects

./: README.md
Atestat/: README.md  about.html  blog.html  cart.html  contact.html  index.html  login.html  p1.html  p10.html  p11.html  p12.html  p13.html  p2.html  p3.html  p4.html  p5.html  p6.html  p7.html  p8.html  p9.html  shop.html  style.css
Atestat/JAVA/: login.js  populare.js  script.js  shoop.js  urmeaza.js
Produse/: CMakeLists.txt  README.md  main.cpp
Produse/Abstract/: ActiuneRedo.cpp  ActiuneRedo.h  ActiuneUndo.cpp  ActiuneUndo.h
Produse/Domain/: Produs.cpp  Produs.h
Produse/Exceptii/: RepoException.h  ServiceException.h
Produse/GUI/: CosGui.cpp  CosGui.h  FiltreGui.cpp  FiltreGui.h  ProdusGui.cpp  ProdusGui.h  StatisticiGui.cpp  StatisticiGui.h
Produse/Observer/: Observable.cpp  Observable.h  Observer.h
Produse/Repo/: CosProduse.cpp  CosProduse.h  RepoFile.cpp  RepoFile.h
Produse/Service/: Service.cpp  Service.h
Produse/TableModel/: TableModel.cpp  TableModel.h
Produse/Teste/: teste.cpp  teste.h
Produse/Utilitati/: utils.cpp  utils.h
Produse/Validator/: Validator.cpp  Validator.h
SocialNetworkGUI/: README.md
SocialNetworkGUI/SocialNetworkGUI/: build.gradle
SocialNetworkGUI/SocialNetworkGUI/src/main/java/: module-info.java
SocialNetworkGUI/SocialNetworkGUI/src/main/java/com/example/socialnetworkgui/: Aplication.java  Main.java
SocialNetworkGUI/SocialNetworkGUI/src/main/resources/com/example/socialnetworkgui/: account-view.fxml  addFriend-view.fxml  conversation-view.fxml  friendPage-view.fxml  friendRequests-view.fxml  (+8 more)
(+54 files in other folders)
